🔒 SECURITY FIX: Remove exposed API key and add .env to .gitignore
CRITICAL SECURITY PATCH:
- Removed real Gemini API key from env.example
- Added comprehensive .env patterns to .gitignore
- Secured all environment variables from future commits
- Replaced API key with placeholder: your_gemini_api_key_here

⚠️  IMPORTANT: The exposed API key should be regenerated immediately
for security. This commit removes it from the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# Environment Variables
+.env
+.env.local
+.env.production
+.env.staging
+.env.development
+*.env
+
+# API Keys and Secrets
+**/*.key
+**/*.pem
+**/*.p12
+secrets.json
